No idea what this does

--- a/espacos-metricos.tex
+++ b/espacos-metricos.tex
@@ -1,5 +1,6 @@
 % !TeX root = ./main.tex
 \section{Elementos de Espaços Métricos}
+\label{ap: espacos_metricos}
 
 Aqui apresentamos noções básicas relativas a espaços métricos, amplamente utilizadas ao longo do texto.
 
