--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 \theoremstyle{plain}% default
 \newtheorem{teo}{Teorema}[section]
-\newtheorem{lem}[teo]{Lema}
+\newtheorem{lem}{Lema}
 \newtheorem{prop}{Proposição}
 \newtheorem{cor}[teo]{Corolário}
 \newtheorem*{axiom}{Axioma}
@@ -9,9 +9,9 @@
 \newtheorem{defn}{Definição}[section]
 \newtheorem{conj}{Conjectura}[section]
 \newtheorem{exmp}{Exemplo}
+\newtheorem*{rem}{Observação}
 
 \theoremstyle{remark}
-\newtheorem*{rem}{Observação}
 \newtheorem*{note}{Nota}
 \newtheorem{case}{Caso}
 
