--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,16 +1,12 @@
-@article{cybenko92,
+@article{cybenko89,
   author    = {George Cybenko},
   title     = {Approximation by superpositions of a sigmoidal function},
   journal   = {Math. Control. Signals Syst.},
-  volume    = {5},
-  number    = {4},
-  pages     = {455},
-  year      = {1992},
-  url       = {https://doi.org/10.1007/BF02134016},
-  doi       = {10.1007/BF02134016},
-  timestamp = {Thu, 10 Sep 2020 01:00:00 +0200},
-  biburl    = {https://dblp.org/rec/journals/mcss/Cybenko92.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  volume    = {2},
+  pages     = {303--314},
+  year      = {1989},
+  url       = {https://doi.org/10.1007/BF02551274},
+  doi       = {10.1007/BF02551274}
 }
 @misc{weierstrass,
 author      = {Matt Young},
@@ -43,4 +39,14 @@ publisher   = {Queen's University at Kingston}
   title          = {Espaços métricos},
   publisher      = {Edgard Bl\"{u}cher, Ltda.},
   year           = {1977}
+}
+@article{lipmann,
+  author={R. {Lippmann}},
+  journal={IEEE ASSP Magazine},
+  title={An introduction to computing with neural nets},
+  year={1987},
+  volume={4},
+  number={2},
+  pages={4-22},
+  doi={10.1109/MASSP.1987.1165576}
 }
