--- a/main.tex
+++ b/main.tex
@@ -3,12 +3,15 @@
 \usepackage{mathtools, amsthm}
 \usepackage{exercise-sheet}
 \usepackage{global-macros}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
 \usepackage[
     backend=biber,
     style=alphabetic,
     sorting=ynt
 ]{biblatex}
 \usepackage{csquotes}
+\usepackage{hyperref}
 \addbibresource{bibliografia.bib}
 
 \input{preamble.tex}
@@ -28,6 +31,9 @@
 \input{weierstrass}
 \input{hilbert}
 \input{hahn-banach}
+\input{aproximacao-universal}
+
+\printbibliography
 
 \newpage
 
