--- a/preamble.tex
+++ b/preamble.tex
@@ -29,3 +29,4 @@
 \DeclareMathOperator{\vspan}{span}
 \DeclareMathOperator{\proj}{proj}
 \DeclareMathOperator{\lin}{Lin}
+\renewcommand{\Re}{\text{Re}}
